--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         text-align: right;
         padding-top: 11em;
-        background-color: Peach;
+        background-color: Green;
 
       }
       .textColumn p {
